[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metriqual"
version = "1.0.0"
description = "Official Python SDK for the Metriqual API — unified LLM proxy with chat, audio, video, image, music, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Metriqual", email = "support@metriqual.com" },
]
keywords = ["metriqual", "llm", "ai", "api", "sdk", "openai", "proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
async = ["httpx[http2]>=0.25.0"]

[project.urls]
Homepage = "https://metriqual.com"
Documentation = "https://docs.metriqual.com"
Repository = "https://github.com/Metriqual/python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["metriqual"]

[tool.hatch.build]
exclude = ["env", ".venv", "venv", "*.egg-info"]

[tool.hatch.build.targets.sdist]
exclude = ["env", ".venv", "venv", "*.egg-info"]
